--------------------------------------------------------------------------------
drkns 2024-05-29 17:32:47+01:00 - build 6337

1. Continue 6336.

--------------------------------------------------------------------------------
drkns 2024-05-27 00:33:52+01:00 - build 6336

1. Refactoring.

2. Do not use forward slashes in NT paths.

--------------------------------------------------------------------------------
yjh 2024-05-24 23:54:29+03:00 - build 6335

1. SQLite 3.46.0

--------------------------------------------------------------------------------
drkns 2024-05-13 18:47:46+01:00 - build 6334

1. 0004043: In Panel mode Ctrl+\ doesn't work to jump to the drive root on Czech keyboard.
   Dead keys saga continues.

--------------------------------------------------------------------------------
drkns 2024-05-11 12:07:52+01:00 - build 6333

1. Reimplement 6332 slightly differently to not break the tests, OEM keys and compatibility with 1.x plugins.

--------------------------------------------------------------------------------
shmuel 2024-05-10 14:07:17+03:00 - build 6332

1. Fix: NumEnter and NumDel posted from a macro were incorrectly converted
        to INPUT_RECORD (EventType was set to 0).
        That caused problems in plugins processing DN_CONTROLINPUT.

--------------------------------------------------------------------------------
drkns 2024-05-06 12:34:28+01:00 - build 6331

1. Refactoring.

--------------------------------------------------------------------------------
drkns 2024-05-05 18:00:54+01:00 - build 6330

1. Experimental: handle AltGr as Alt when nothing is mapped to it.

--------------------------------------------------------------------------------
johnd0e 2024-05-05 18:03:00+02:00 - build 6329

1. gh-836: Apply ENHANCED_KEY for more relevant keys in TranslateKeyToVK

--------------------------------------------------------------------------------
drkns 2024-05-05 13:25:24+01:00 - build 6328

1. A few alignment-related fixes.
